New method for inserting tags. Fixes handlebars embed timing issue

--- a/iris_core/modules/core/frontend/templates/403.html
+++ b/iris_core/modules/core/frontend/templates/403.html
@@ -2,7 +2,7 @@
 
 <html>
   
-    {{{iris_tags "headTags"}}}
+    [[[tags headTags]]]
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
