--- a/iris_core/modules/core/frontend/templates/404.html
+++ b/iris_core/modules/core/frontend/templates/404.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
 <link rel="stylesheet" href="/modules/admin_ui/admin_menu.css" />
 
-    {{{iris_tags "headTags"}}}
+    [[[tags headTags]]]
   
 <title>Iris</title>
 
