--- a/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
@@ -4,7 +4,7 @@
   
 <!-- CSS and JS common to all pages --->
   
-  {{{iris_tags "headTags"}}}
+  [[[tags headTags]]]
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
