--- a/iris_core/themes/base/templates/html.html
+++ b/iris_core/themes/base/templates/html.html
@@ -3,7 +3,7 @@
   <head>
 
     <title>{{current.title}}</title>
-    {{{iris_tags "headTags"}}}
+    [[[tags headTags]]]
       
     {{#unless tags.headTags.jQuery}}
         <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
