--- a/iris_core/themes/base/templates/html.html
+++ b/iris_core/themes/base/templates/html.html
@@ -3,16 +3,13 @@
   <head>
 
     <title>{{current.title}}</title>
-    [[[tags headTags]]]
-      
-    {{#unless tags.headTags.jQuery}}
-        <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
-    {{/unless}}
-      
+    <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/themes/base/style.css">
     <link rel="shortcut icon" href="/themes/base/favicon.png" type="image/x-icon">
+    [[[tags headTags,-jQuery]]]
+    
   </head>
 
   <body class="{{current.entityType}}-{{current.eid}}">
