--- a/iris_core/modules/core/admin_ui/templates/admin_schema.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema.html
@@ -8,14 +8,8 @@
 
 <h1>Edit entity type {{entityType}}</h1>
 
-<div class="currentFields">
-
-  [[[form schema,{{entityType}},4]]]
-
-</div>
-
 {{else}}
 
 <h1>Create new entity type</h1> {{/if}}
 
-<h2>Add a field</h2> [[[form schema,{{entityType}}]]]
+[[[form schema,{{entityType}}]]]
