Split entity schema form into new field + existing

--- a/iris_core/modules/core/admin_ui/templates/admin_schema.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema.html
@@ -1,15 +1,44 @@
 <style>
-  .currentFields ._jsonform-array-addmore {
+  ._jsonform-array-addmore {
     display: none;
   }
+  
+  ._jsonform-array-deletelast {
+    display: none;
+  }
+  
+  #current-fields select[name$=fieldType] {
+    display: none;
+  }
+  
+  #new-field ._jsonform-array-item-delete {
+    display: none !important;
+  }
+  
+  #new-field .draggable {
+    display: none;
+  }
+
 </style>
 
 {{#if entityType}}
 
 <h1>Edit entity type {{entityType}}</h1>
 
+<h2>Edit existing fields </h2>
+
+<div id="current-fields">
+  [[[form schema,{{entityType}},existing]]]
+</div>
+
 {{else}}
 
 <h1>Create new entity type</h1> {{/if}}
 
-[[[form schema,{{entityType}}]]]
+<h2>Add a new field</h2>
+
+<div id="new-field">
+
+  [[[form schema,{{entityType}}]]]
+
+</div>
