Change edit entity schema link

--- a/iris_core/modules/core/admin_ui/templates/admin_entity_types.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_entity_types.html
@@ -18,7 +18,7 @@
 
 {{#each entityTypes}}
 
-<tr><td>{{this}}</td><td><div class="dropdown closed"><span class="glyphicon glyphicon-chevron-down"></span><ul><li><a href='/admin/entitylist/{{this}}'>View content</a></li><li><a href='/admin/create/{{this}}'>Create new</a></li><li><a href='/admin/schema/edit/{{this}}'>Edit entity fields</a></li></ul></div></td></tr>
+<tr><td>{{this}}</td><td><div class="dropdown closed"><span class="glyphicon glyphicon-chevron-down"></span><ul><li><a href='/admin/entitylist/{{this}}'>View content</a></li><li><a href='/admin/create/{{this}}'>Create new</a></li><li><a href='/admin/schema/{{this}}'>Edit entity fields</a></li></ul></div></td></tr>
 
 {{/each}}
 
