Anchor link to add new field

--- a/iris_core/modules/core/admin_ui/templates/admin_schema.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema.html
@@ -27,6 +27,10 @@
 
 <h2>Edit existing fields </h2>
 
+<a style="display:block; width:150px; margin:auto" class="btn btn-default" href='#new-field'>Add a new field</a>
+
+<br />
+
 <div id="current-fields">
   [[[form schema,{{entityType}},existing]]]
 </div>
