allow nested fieldsets in schema/field UI

--- a/iris_core/modules/core/admin_ui/templates/admin_schema_manage_fields.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema_manage_fields.html
@@ -36,5 +36,5 @@ $(function() {
   
 </script>
 <div id="current-fields">
-  [[[form schemaFieldListing,{{entityType}},existing]]]
+  [[[form schemaFieldListing,{{entityType}},{{parent}}]]]
 </div>
