--- a/iris_core/modules/core/admin_ui/templates/admin_schema_field.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema_field.html
@@ -1,6 +1,6 @@
 <h1>Edit field {{field}} on entity type {{entityType}}</h1>
 
-[[[form schemafield,{{entityType}},{{field}}]]]
+[[[form schemafield,{{entityType}},{{field}},{{parent}}]]]
 
-[[[form schemafieldwidgets,{{entityType}},{{field}}]]]
+
 
