Change path lookup delimeter

--- a/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
@@ -16,7 +16,7 @@
     
   <!--- This is intended as a general wrapper for all admin pages. --->
 
-  [[[menu admin-toolbar]]]
+  [[[menu admin_toolbar]]]
 
   <section id="main">
 
