add delete field template and update menu reference

--- a/iris_core/themes/base/templates/html.html
+++ b/iris_core/themes/base/templates/html.html
@@ -14,7 +14,7 @@
 
   <body class="{{current.entityType}}-{{current.eid}}">
       
-    [[[menu admin-toolbar]]]
+    [[[menu admin_toolbar]]]
 
     <header id="page-header">
         
