Start of refactoring modules

--- a/iris_core/modules/core/menu/templates/admin_menu_list.html
+++ b/iris_core/modules/core/menu/templates/admin_menu_list.html
@@ -5,9 +5,9 @@
   {{#each menuList}}
 
   <li>
-    {{@key}} <a href="/admin/menu/edit/{{@key}}">- edit</a> </li>
+    {{@key}} <a href="/admin/structure/menu/edit/{{@key}}">- edit</a> </li>
   {{/each}}
 
 </ul>
 
-<a class="btn btn-primary" href="/admin/menu/create">Create new menu </a>
+<a class="btn btn-primary" href="/admin/structure/menu/create">Create new menu </a>
