--- a/iris_core/themes/base/templates/html.html
+++ b/iris_core/themes/base/templates/html.html
@@ -4,7 +4,7 @@
 
     <title>{{current.title}}</title>
     <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/themes/base/bootstrap.min.css">
     <script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/themes/base/style.css">
     <link rel="shortcut icon" href="/themes/base/favicon.png" type="image/x-icon">
