--- a/iris_core/modules/core/user/templates/first_user.html
+++ b/iris_core/modules/core/user/templates/first_user.html
@@ -1,7 +1,7 @@
 [[[tags headTags]]]
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="/modules/admin_ui/admin.css" />
-<link rel="stylesheet" href="/modules/admin_ui/admin_menu.css" />
+<link rel="stylesheet" href="/modules/system/admin.css" />
+<link rel="stylesheet" href="/modules/system/admin_menu.css" />
 
 <h1>Set up your root admin account</h1>
 
