Run child paths through iris_menu

--- a/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
+++ b/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
@@ -15,11 +15,11 @@
           <ul class="sub-menu">
               {{#children}}
 
-          
+          {{#if (iris_menu path)}}
 
             <li><a href="{{path}}">{{title}}</a></li>
 
-          
+          {{/if}}
 
           {{/children}}
           </ul>
