Bring back widget form

--- a/iris_core/modules/extra/entityUI/templates/admin_schema_field.html
+++ b/iris_core/modules/extra/entityUI/templates/admin_schema_field.html
@@ -2,5 +2,7 @@
 
 [[[form schemafield,{{entityType}},{{field}},{{parent}}]]]
 
+[[[form schemafieldwidgets,{{entityType}},{{field}},{{parent}}]]]
+
 
 
