[#10] apply user specific message sending via hook_entity_view

--- a/home/sites/chito/themes/base/templates/page__1.html
+++ b/home/sites/chito/themes/base/templates/page__1.html
@@ -24,7 +24,7 @@
 <div ng-controller="iris-template" ng-iris-template="users">
 
   <ul>
-    <li ng-repeat="user in users">{{user.username}}</li>
+    <li ng-repeat="user in users"> \{\{user.username\}\}</li>
 
   </ul>
 
