Parse system registered menus into templates

--- a/iris_core/modules/core/menu/templates/menu.html
+++ b/iris_core/modules/core/menu/templates/menu.html
@@ -2,7 +2,7 @@
 
   <ul class="menu">
 
-    {{#menu.items}}
+    {{#menu}}
 
         <li {{#children}} class="has-children" {{/children}}>
 
@@ -25,7 +25,7 @@
       
     </li>
 
-    {{/menu.items}}
+    {{/menu}}
 
   </ul>
 
