--- a/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
+++ b/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
@@ -3,7 +3,7 @@
 
   <ul class="menu">
     
-    {{#menu.items}}
+    {{#menu}}
     
       {{#if (iris_menu path)}}
       
@@ -33,7 +33,7 @@
     
     {{/if}}
 
-    {{/menu.items}}
+    {{/menu}}
 
   </ul>
 
