Move admin menu to new menu system

--- a/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
+++ b/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/modules/system/admin_menu.css" />
-<nav class="menu menu-{{menu.menuName}}">
+<nav class="menu menu-admin-toolbar">
 
   <ul class="menu">
     
