--- a/iris_core/modules/extra/textfilters/templates/admin_textfilters_form.html
+++ b/iris_core/modules/extra/textfilters/templates/admin_textfilters_form.html
@@ -1,7 +1,7 @@
 {{#if formatname}}
 <h1>Edit {{formatname}}</h1>
-[[[form textformat,{{formatname}}]]]
+[[[form textfilter,{{formatname}}]]]
 {{else}}
 <h1>Create new text filter</h1>
-[[[form textformat]]]
+[[[form textfilter]]]
 {{/if}}
