Top level routes for admin menu
Also introducing iris.modules.menu.globals.getBaseLinks helper function
to get all base menu links for a path.

--- a/iris_core/modules/extra/configUI/templates/admin_config.html
+++ b/iris_core/modules/extra/configUI/templates/admin_config.html
@@ -7,8 +7,8 @@
 
 {{/if}}
 
-<h3>Config export/import options</h3>
+<h3>Options</h3>
 
-  {{#each configMenu.children}}
+  {{#each configMenu.links}}
   <a class="btn btn-primary" href="{{this.path}}">{{this.title}}</a>
   {{/each}}
