getMenuList function to get available menus

--- a/iris_core/modules/core/menu/templates/admin_menu_list.html
+++ b/iris_core/modules/core/menu/templates/admin_menu_list.html
@@ -5,7 +5,7 @@
   {{#each menuList}}
 
   <li>
-    {{@key}} <a href="/admin/structure/menu/edit/{{@key}}">- edit</a> </li>
+    {{this}} <a href="/admin/structure/menu/edit/{{this}}">- edit</a> </li>
   {{/each}}
 
 </ul>
