--- a/iris_core/themes/base/static/style.css
+++ b/iris_core/themes/base/static/style.css
@@ -94,3 +94,20 @@ h1, h2, h3, h4 {
     color:#fff !important;
   background: #666;
 }
+
+.dropdown-checkboxes {
+    position: relative;
+    background: #fff;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 300px;
+    height: 34px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background: white;
+}
+
+.dropdown-checkboxes.open {
+    height:auto;
+}
