further routes added

--- a/iris_core/modules/core/system/templates/admin_structure.html
+++ b/iris_core/modules/core/system/templates/admin_structure.html
@@ -1,5 +1,5 @@
-<h1>Structure</h1>
+<h1>{{current.title}}</h1>
 
 <ul>
-  {{#each structureMenu.children}} <li><a href="{{this.path}}">{{this.title}}</a></li> {{/each}}
+  {{#each list.children}} <li><a href="{{this.path}}">{{this.title}}</a></li> {{/each}}
 </ul>
