feat(admin): Theming
Signed-off-by: Alex Bor <alexhbor@gmail.com>

--- a/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
+++ b/iris_core/modules/core/menu/templates/menu__admin_toolbar.html
@@ -7,7 +7,7 @@
     
       {{#if (iris_menu path)}}
       
-        <li {{#children}} class="has-children" {{/children}}>
+        <li {{#if children}} class="has-children" {{/if}}>
 
       <a href="{{path}}">{{title}}</a>
           
