--- a/iris_core/modules/core/system/templates/admin_themes.html
+++ b/iris_core/modules/core/system/templates/admin_themes.html
@@ -1,3 +1,5 @@
-<h1>Themes</h1> 
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Themes</div>
 
 [[[form themes]]]
+</div>
