--- a/iris_core/modules/extra/entityUI/templates/admin_schema_manage_fields.html
+++ b/iris_core/modules/extra/entityUI/templates/admin_schema_manage_fields.html
@@ -18,7 +18,7 @@
 
 </style>
 
-<h1>Manage fields for {{entityType}}</h1>
+<!--<h1>Manage fields for {{entityType}}</h1>-->
 
 
 <br />
@@ -37,5 +37,7 @@
   
 </script>
 <div id="current-fields">
-  [[[form schemaFieldListing,{{entityType}},{{parent}}]]]
+
+    [[[form schemaFieldListing,{{entityType}},{{parent}}]]]
+
 </div>
