--- a/iris_core/modules/extra/menu_ui/templates/admin_menu_list.html
+++ b/iris_core/modules/extra/menu_ui/templates/admin_menu_list.html
@@ -1,13 +1,34 @@
-<h1>Menus</h1>
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Menus
+    <a class="btn btn-primary right" href="/admin/structure/menu/create">Create new menu </a>
+    <div class="clear"></div>
+  </div>
 
-<ul>
+  <table class="table" style="margin-top: 0px;">
 
-  {{#each menuList}}
+    <tbody>
+    {{#each menuList}}
+    <tr>
+      <td>{{this}}</td>
+      <td><a class="btn btn-default" href="/admin/structure/menu/edit/{{this}}">Edit</a> &nbsp;
+        <a class="btn btn-danger" href="/admin/structure/menu/delete/{{this}}">Delete</a></td>
+    </tr>
 
-  <li>
-    {{this}} <a href="/admin/structure/menu/edit/{{this}}">- edit</a> <a href="/admin/structure/menu/delete/{{this}}">delete</a> </li>
-  {{/each}}
-  
-</ul>
+    {{/each}}
 
-<a class="btn btn-primary" href="/admin/structure/menu/create">Create new menu </a>
+
+
+
+    </tbody>
+  </table>
+
+  <ul>
+
+
+
+  </ul>
+
+
+</div>
+
+
