--- a/iris_core/modules/extra/regions/templates/admin_regions.html
+++ b/iris_core/modules/extra/regions/templates/admin_regions.html
@@ -1,3 +1,6 @@
-<h1>Blocks and Regions</h1>
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Blocks and regions</div>
 
-[[[form regions]]]
+  [[[form regions]]]
+
+</div>
