--- a/iris_core/modules/core/system/static/admin.css
+++ b/iris_core/modules/core/system/static/admin.css
@@ -145,37 +145,37 @@ thead tr {
 
 /* Entities page */
 
-#entity-types {
-  width: 100%;
-}
-#entity-types .dropdown {
-  overflow: hidden;
-  background: #fff;
-  width: auto;
-  display: inline-block;
-  padding: 3px 10px 0 10px;
-  border-radius: 10px;
-  border: 1px solid #999;
-  position: absolute;
-  margin-top: -15px;
-  z-index: 2;
-}
-#entity-types .dropdown.closed {
-  height: 30px;
-  z-index: 1;
-}
-#entity-types .glyphicon {
-  float: left;
-  padding-top: 3px;
-  cursor: pointer;
-}
-#entity-types ul {
-  list-style: none;
-  padding-left: 25px;
-}
-#entity-types ul a {
-  white-space: nowrap;
-}
+/*#entity-types {*/
+  /*width: 100%;*/
+/*}*/
+/*#entity-types .dropdown {*/
+  /*overflow: hidden;*/
+  /*background: #fff;*/
+  /*width: auto;*/
+  /*display: inline-block;*/
+  /*padding: 3px 10px 0 10px;*/
+  /*border-radius: 10px;*/
+  /*border: 1px solid #999;*/
+  /*position: absolute;*/
+  /*margin-top: -15px;*/
+  /*z-index: 2;*/
+/*}*/
+/*#entity-types .dropdown.closed {*/
+  /*height: 30px;*/
+  /*z-index: 1;*/
+/*}*/
+/*#entity-types .glyphicon {*/
+  /*float: left;*/
+  /*padding-top: 3px;*/
+  /*cursor: pointer;*/
+/*}*/
+/*#entity-types ul {*/
+  /*list-style: none;*/
+  /*padding-left: 25px;*/
+/*}*/
+/*#entity-types ul a {*/
+  /*white-space: nowrap;*/
+/*}*/
 .expandable > legend:before {
   content: '\25B8';
   padding-right: 5px;
@@ -308,4 +308,58 @@ div[data-jsonform-type="checkbox"] .controls{
   position: relative;
   left: 10px;
   top: 5px;
+}
+
+.admin-header{
+  background: #1C2440;
+  color: white;
+}
+
+.right{
+  float: right;
+}
+
+.left{
+  float: left;
+}
+
+.clear{
+  clear: both;
+}
+
+.glyphicon-resize-vertical{
+  cursor: ns-resize;
+}
+
+div.admin-inputs div.form-group{
+  margin-bottom: 0px;
+  border-radius: 0px;
+  background: white !important;
+}
+
+.admin-header-padding{
+  padding: 10px;
+}
+
+.admin-inputs{
+  margin-top: 20px;
+}
+
+.admin-inputs form {
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+  padding-bottom: 20px;
+  border-color: #1C2440;
+}
+
+.submit-form{
+  margin-left: 20px;
+}
+
+@media only screen and (max-width : 768px) {
+
+  section#admin_sidebar{
+    position: inherit;
+  }
 }
