--- a/iris_core/modules/extra/entityUI/templates/admin_entity_types.html
+++ b/iris_core/modules/extra/entityUI/templates/admin_entity_types.html
@@ -5,23 +5,29 @@
 
 </script>
 
-<h1>Manage entity types</h1>
 
-<table id="entity-types">
-  <thead>
-    <tr>
-      <th>Entity name</th>
-      <th>Options</th>
-    </tr>
-  </thead>
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Manage entity types</div>
+
+  <table id="entity-types" style="margin-top: 0px;">
+  <!--<thead>-->
+    <!--<tr>-->
+      <!--<th>Entity name</th>-->
+      <!--<th>Options</th>-->
+    <!--</tr>-->
+  <!--</thead>-->
 
   {{#each entityTypes}}
 
   <tr>
     <td>{{this}}</td>
     <td>
-      <div class="dropdown closed"><span class="glyphicon glyphicon-chevron-down"></span>
-        <ul>
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Options
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
           <li><a href='/admin/entitylist/{{this}}'>View content</a></li>
           <li><a href='/admin/create/{{this}}'>Create new</a></li>
           <li><a href='/admin/schema/{{this}}/edit'>Edit entity type</a></li>
@@ -36,4 +42,5 @@
 
 
 </table>
-<a class="btn btn-primary" href="/admin/schema/create">Create a new entity type</a>
+  <a class="btn btn-primary" href="/admin/schema/create">Create a new entity type</a>
+</div>
