--- a/iris_core/modules/extra/entityUI/templates/admin_schema.html
+++ b/iris_core/modules/extra/entityUI/templates/admin_schema.html
@@ -20,7 +20,7 @@
 
 {{#if entityType}}
 
-<h1>Edit entity type {{entityType}}</h1>
+<!--<h1>Edit entity type {{entityType}}</h1>-->
 
 <br />
 
@@ -30,9 +30,11 @@
 
 {{else}}
 
-<h1>Create new entity type</h1> 
+<!--<h1>Create new entity type</h1>-->
 
-[[[form schema,{{entityType}}]]]
-
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Create A New Schema</div>
+  [[[form schema,{{entityType}}]]]
+</div>
 {{/if}}
 
