--- a/iris_core/modules/extra/menu_ui/templates/admin_menu_form.html
+++ b/iris_core/modules/extra/menu_ui/templates/admin_menu_form.html
@@ -1,3 +1,5 @@
-<h1>Create new menu</h1>
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Create new menu</div>
 
-[[[form menu]]]
+  [[[form menu]]]
+</div>
