--- a/iris_core/modules/extra/entityUI/templates/admin_schema.html
+++ b/iris_core/modules/extra/entityUI/templates/admin_schema.html
@@ -20,12 +20,13 @@
 
 {{#if entityType}}
 
-<!--<h1>Edit entity type {{entityType}}</h1>-->
 
-<br />
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Edit Entity</div>
 
-<div id="current-fields">
-  [[[form schema,{{entityType}},existing]]]
+  <div id="current-fields">
+    [[[form schema,{{entityType}},existing]]]
+  </div>
 </div>
 
 {{else}}
