--- a/iris_core/modules/core/system/templates/admin_modules.html
+++ b/iris_core/modules/core/system/templates/admin_modules.html
@@ -1,3 +1,4 @@
-<h1>Modules</h1> 
-
-[[[form modules]]]
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Modules</div>
+  [[[form modules]]]
+</div>
