--- a/iris_core/modules/extra/permissionsUI/templates/admin_permissions.html
+++ b/iris_core/modules/extra/permissionsUI/templates/admin_permissions.html
@@ -1,3 +1,4 @@
-<h1>Permissions</h1>
-
-[[[form permissions]]]
+<div class="admin-inputs no-fieldset-bg">
+  <div class="admin-header admin-header-padding">Permissions</div>
+  [[[form permissions]]]
+</div>
