--- a/iris_core/modules/extra/blocks/templates/admin_blockdelete.html
+++ b/iris_core/modules/extra/blocks/templates/admin_blockdelete.html
@@ -1,3 +1,5 @@
-Are you sure you want to delete this block?
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Delete Schema: {{entityType}}</div>
+    [[[form blockDeleteForm,{{blocktype}},{{blockid}}]]]
 
-[[[form blockDeleteForm,{{blocktype}},{{blockid}}]]]
+</div>
