--- a/iris_core/modules/extra/blocks/templates/admin_blockform.html
+++ b/iris_core/modules/extra/blocks/templates/admin_blockform.html
@@ -1,15 +1,16 @@
 {{#if blockid}}
 
-<h1>Editing {{blocktype}} {{blockid}}</h1>
-
-[[[form blockForm_{{blocktype}},{{blockid}}]]]
-
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Editing {{blocktype}} {{blockid}}</div>
+  [[[form blockForm_{{blocktype}},{{blockid}}]]]
+</div>
 {{else}}
 
-<h1>Creating new {{blocktype}}</h1>
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Creating new {{blocktype}}</div>
+  [[[form blockForm_{{blocktype}}]]]
+</div>
 
-
-[[[form blockForm_{{blocktype}}]]]
 
 {{/if}}
 
