--- a/iris_core/modules/extra/blocks/templates/admin_blockslist.html
+++ b/iris_core/modules/extra/blocks/templates/admin_blockslist.html
@@ -1,21 +1,35 @@
-<h1>Blocks</h1>
 
-<ul>
+<div class="admin-inputs">
+  <div class="admin-header admin-header-padding">Blocks</div>
+  <table class="table no-margin-top" id="entity-list">
 
-  {{#each blocks}} 
-    {{#each this}} 
-      <li>{{this.blockTitle}} ({{this.blockType}}) - <a href="/admin/blocks/edit/{{this.blockType}}/{{this.blockTitle}}">edit</a> - <a href="/admin/blocks/delete/{{this.blockType}}/{{this.blockTitle}}">delete</a></li> 
-    {{/each}} 
-  {{/each}}
+    <tbody>
+      <tr class="admin-header admin-header-lighter">
+        <th style="border-top: 0px;">Block</th>
+        <th style="border-top: 0px;">Options</th>
+      </tr>
+      {{#each blocks}}
+      {{#each this}}
+      <tr>
+        <td>{{this.blockTitle}} ({{this.blockType}})</td>
+        <td><a class="btn btn-default" href="/admin/blocks/edit/{{this.blockType}}/{{this.blockTitle}}">Edit</a>
+          <a class="btn btn-danger" href="/admin/blocks/delete/{{this.blockType}}/{{this.blockTitle}}">Delete</a></li></td>
+      </tr>
+      {{/each}}
+      {{/each}}
+    </tbody>
+  </table>
+  <div class="admin-header admin-header-padding">Create a new block</div>
+  {{#if blockTypes}}
 
-</ul>
+  [[[form newBlockForm]]]
 
-{{#if blockTypes}}
+  {{else}}
 
-[[[form newBlockForm]]]
+  <p>No block types are enabled. Please enable a module that provides block types.</p>
 
-{{else}}
+  {{/if}}
+</div>
 
-<p>No block types are enabled. Please enable a module that provides block types.</p>
 
-{{/if}}
+
