--- a/iris_core/modules/extra/configUI/templates/admin_import_config.html
+++ b/iris_core/modules/extra/configUI/templates/admin_import_config.html
@@ -1,5 +1,35 @@
-<h1>Import configuration</h1>
+<script>
+  $(document).ready(function(){
+    $('#import-config').on('click', function(e){
+      e.preventDefault();
+      var thiss = $(this);
 
-<p>Your site configuration will be loaded from the <i>staging</i> directory.</p>
+      thiss.button("loading");
 
-<a class="btn btn-primary" href="/admin/api/config/import">Import configuration</a>
+      $.ajax({
+        url: thiss.attr("href"),
+        success: function(data){
+          if(data = "Config exported"){
+            thiss.button("reset");
+            $('#exported').slideDown();
+
+          }
+        }
+      });
+
+    })
+  })
+
+</script>
+<div class="admin-inputs no-fieldset-bg">
+
+  <div class="admin-header admin-header-padding">Import Config</div>
+  <div class="borders">
+    <div style="padding: 10px; ">
+      <div class="alert alert-info" role="alert">Your site configuration will be loaded from the <i>staging</i> directory.</div>
+      <div class="alert alert-success" style="display: none;" id="exported" role="alert">Great! Your config has been imported</div>
+    </div>
+
+    <a class="btn btn-primary" id="import-config" data-loading-text="Importing..." href="/admin/api/config/import">Import configuration</a>
+  </div>
+</div>
