--- a/iris_core/modules/extra/roles_ui/templates/administer-roles.html
+++ b/iris_core/modules/extra/roles_ui/templates/administer-roles.html
@@ -1,3 +1,4 @@
-<h1>Adminsiter roles</h1>
-
-[[[form manageRoles]]]
+<div class="admin-inputs" class="no-fieldset-bg">
+  <div class="admin-header admin-header-padding">Adminsiter roles</div>
+  [[[form manageRoles]]]
+</div>
