--- a/iris_core/modules/extra/entityUI/templates/admin_entity_types.html
+++ b/iris_core/modules/extra/entityUI/templates/admin_entity_types.html
@@ -25,7 +25,7 @@
           <li><a href='/admin/entitylist/{{this}}'>View content</a></li>
           <li><a href='/admin/create/{{this}}'>Create new</a></li>
           <li><a href='/admin/schema/{{this}}/edit'>Edit entity type</a></li>
-          <li><a href='/admin/schema/{{this}}/manage-fields'>Manage fields</a></li>
+          <li><a href='/admin/schema/{{this}}/fields'>Manage fields</a></li>
           <li><a href='/admin/schema/{{this}}/delete'>Delete schema</a></li>
         </ul>
       </div>
