--- a/modules/core/system/templates/admin_wrapper.html
+++ b/modules/core/system/templates/admin_wrapper.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="/modules/system/admin.css" />
   <script type="text/javascript" src="/modules/system/bootstrap/js/bootstrap.min.js"></script>
-  [[[tags headTags,-jQuery]]]
+  [[[tags headTags,"-jQuery"]]]
 </head>
 
 <body class="{{bodyClass}}">
