--- a/themes/base/templates/html.html
+++ b/themes/base/templates/html.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="/modules/system/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/themes/base/style.css">
     <link rel="shortcut icon" href="/themes/base/favicon.png" type="image/x-icon">
-    [[[tags headTags,"-jQuery"]]]
+    [[[tags headTags,-jQuery]]]
     
   </head>
 
