password reset plus restructuring

--- a/modules/core/user/templates/password-reset.html
+++ b/modules/core/user/templates/password-reset.html
@@ -2,7 +2,6 @@
 
 <section id="login-page">
   <div id="login-form">
-    [[[form login]]]
-    <a href="/user/password">Forgot your password?</a>
+    [[[form passwordReset]]]
   </div>
 </section>
