--- a/modules/extra/entityUI/templates/admin_entity_types.html
+++ b/modules/extra/entityUI/templates/admin_entity_types.html
@@ -23,7 +23,7 @@
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
           <li><a href='/admin/entitylist/{{this}}'>View content</a></li>
-          <li><a href='/admin/create/{{this}}'>Create new</a></li>
+          <li><a href='/{{this}}/create'>Create new</a></li>
           <li><a href='/admin/schema/{{this}}/edit'>Edit entity type</a></li>
           <li><a href='/admin/schema/{{this}}/fields'>Manage fields</a></li>
           <li><a href='/admin/schema/{{this}}/delete'>Delete schema</a></li>
