Fix blocks module UI
Forms were broken.

--- a/modules/extra/blocks/templates/admin_blockdelete.html
+++ b/modules/extra/blocks/templates/admin_blockdelete.html
@@ -1,5 +1,5 @@
 <div class="admin-inputs">
   <div class="admin-header admin-header-padding">Delete Schema: {{entityType}}</div>
-    [[[form blockDeleteForm,{{blocktype}},{{blockid}}]]]
+    [[[form blockDeleteForm,{"blockType":"{{blocktype}}","blockID":"{{blockid}}"}]]]
 
 </div>
