--- a/modules/extra/blocks/templates/admin_blockform.html
+++ b/modules/extra/blocks/templates/admin_blockform.html
@@ -2,7 +2,7 @@
 
 <div class="admin-inputs">
   <div class="admin-header admin-header-padding">Editing {{blocktype}} {{blockid}}</div>
-  [[[form blockForm_{{blocktype}},{{blockid}}]]]
+  [[[form blockForm_{{blocktype}},"{{blockid}}"]]]
 </div>
 {{else}}
 
