Fix textfilter admin links and forms

--- a/modules/extra/textfilters/templates/admin_textfilters_form.html
+++ b/modules/extra/textfilters/templates/admin_textfilters_form.html
@@ -1,7 +1,5 @@
 {{#if formatname}}
-<h1>Edit {{formatname}}</h1>
-[[[form textfilter,{{formatname}}]]]
+[[[form textfilter,"{{formatname}}"]]]
 {{else}}
-<h1>Create new text filter</h1>
 [[[form textfilter]]]
 {{/if}}
