--- a/modules/extra/triggers/templates/admin_triggers_form.html
+++ b/modules/extra/triggers/templates/admin_triggers_form.html
@@ -1,7 +1,5 @@
 {{#if action}}
-<h1>Edit trigger {{action}}</h1>
-[[[form actions,{{action}}]]]
+[[[form actions,"{{action}}"]]]
 {{else}}
-<h1>Create trigger action</h1>
 [[[form actions]]]
 {{/if}}
